--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^12.0.0",
         "@testing-library/react-hooks": "^7.0.1",
+        "@testing-library/user-event": "^13.1.9",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.6",
         "identity-obj-proxy": "^3.0.0",
