--- a/package.json
+++ b/package.json
@@ -11,18 +11,27 @@
         "format:staged": "d2-style apply --staged",
         "lint": "d2-style check",
         "start": "d2-app-scripts start",
-        "test": "d2-app-scripts test"
+        "start:nobrowser": "BROWSER=none d2-app-scripts start",
+        "test": "d2-app-scripts test",
+        "cypress:capture": "start-server-and-test 'yarn start:nobrowser' http://localhost:3000 'yarn cypress run --env dhis2ApiVersion=37,networkMode=capture'",
+        "cypress:stub": "start-server-and-test 'yarn start:nobrowser' http://localhost:3000 'yarn cypress run --env dhis2ApiVersion=37,networkMode=stub'",
+        "cypress:live": "start-server-and-test 'yarn start:nobrowser' http://localhost:3000 'yarn cypress open --env networkMode=live'"
     },
     "devDependencies": {
         "@dhis2/cli-app-scripts": "^7.1.1",
         "@dhis2/cli-style": "^9.2.0",
+        "@dhis2/cypress-commands": "^8.0.2",
+        "@dhis2/cypress-plugins": "^8.0.2",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^12.0.0",
         "@testing-library/react-hooks": "^7.0.1",
         "@testing-library/user-event": "^13.1.9",
+        "cypress": "^7.4.0",
+        "cypress-cucumber-preprocessor": "^4.2.0",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.6",
-        "identity-obj-proxy": "^3.0.0"
+        "identity-obj-proxy": "^3.0.0",
+        "start-server-and-test": "^1.13.1"
     },
     "dependencies": {
         "@dhis2/app-runtime": "^2.9.0-beta.6",
