--- a/.github/workflows/dhis2-verify-app.yml
+++ b/.github/workflows/dhis2-verify-app.yml
@@ -80,7 +80,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                containers: [1, 2, 3, 4]
+                containers: [1, 2]
 
         steps:
             - name: Checkout
