--- a/.github/workflows/dhis2-verify-app.yml
+++ b/.github/workflows/dhis2-verify-app.yml
@@ -172,7 +172,7 @@ jobs:
 
             - uses: dhis2/action-semantic-release@master
               with:
-                  publish-apphub: false # for now
+                  publish-apphub: true
                   publish-github: true
                   github-token: ${{ secrets.DHIS2_BOT_GITHUB_TOKEN }}
                   apphub-token: ${{ secrets.DHIS2_BOT_APPHUB_TOKEN }}
