test(DHIS2-17668): update e2e tests network fixtures

--- a/cypress/fixtures/network/37/users_can_approve,_accept,_unapprove,_and_unaccept_data.json
+++ b/cypress/fixtures/network/37/users_can_approve,_accept,_unapprove,_and_unaccept_data.json
@@ -34,7 +34,7 @@
         }
     },
     {
-        "path": "/api/37/dataApprovalWorkflows?paging=false&fields=id,displayName,dataApprovalLevels,periodType,dataSets%5Bid%2CdisplayName%2CperiodType%5D",
+        "path": "/api/37/dataApprovalWorkflows?paging=false&fields=id,displayName,dataApprovalLevels,periodType,dataSets%5Bid%2CdisplayName%2CperiodType%2CformType%5D",
         "featureName": "Users can approve, accept, unapprove, and unaccept data",
         "static": false,
         "count": 4,
