--- a/package.json
+++ b/package.json
@@ -26,18 +26,18 @@
         "cypress:stub": "start-server-and-test 'yarn start:nobrowser' http://localhost:3000 'yarn cypress run --env dhis2ApiVersion=41,networkMode=stub'"
     },
     "devDependencies": {
+        "@cfaester/enzyme-adapter-react-18": "^0.8.0",
         "@dhis2/cli-app-scripts": "^12.3.0",
         "@dhis2/cli-style": "^10.7.6",
         "@dhis2/cypress-commands": "^9.0.2",
         "@dhis2/cypress-plugins": "^9.0.2",
-        "@testing-library/jest-dom": "^5.14.1",
-        "@testing-library/react": "^12.0.0",
-        "@testing-library/react-hooks": "^7.0.1",
-        "@testing-library/user-event": "^13.2.1",
+        "@testing-library/dom": "^10.4.0",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.2.0",
+        "@testing-library/user-event": "^14.6.1",
         "cypress": "^9.7.0",
         "cypress-cucumber-preprocessor": "^4.3.1",
         "enzyme": "^3.11.0",
-        "enzyme-adapter-react-16": "^1.15.6",
         "identity-obj-proxy": "^3.0.0",
         "start-server-and-test": "^1.13.1"
     },
