--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
         "prop-types": "^15.7.2",
         "query-string": "^7.0.1",
         "use-debounce": "^7.0.0"
+    },
+    "resolutions": {
+        "eslint-plugin-import": "^2.25.1"
     }
 }
